# jsmapper

./: .gitignore  CONTENTS  INSTALL  README
doc/: doxy.cfg
doc/report/: analysis.tex  bibliography.tex  conclusions.tex  design.tex  development.tex  glossary.tex  introduction.tex  planning.tex  pre_analysis.tex  report.kilepr  report.tex  skeleton.txt  specification.tex  title.tex  user_manual.tex  user_manual_create_device_map.tex  user_manual_create_profile.tex  user_manual_using_profiles.tex
doc/report/dia/: axis_mapping.dia  classes.dia  kernel_event_filtering.dia  kernel_module_components.dia  modes.dia
doc/report/gantt/: jsmapper.gan
doc/report/img/: axis_mapping.eps  classes.eps  kernel_event_filtering.eps  kernel_module_components.eps  modes.eps
doc/report/ods/: costs.ods
doc/report/src/: joystick_api_ioctl_sample.c  joystick_api_sample.c
doc/slideshow/: input_architecture.odg  jsmapper.odp  jsmapper_architecture.odg  jsmapper_components.odg  library_classes.odg  notes.txt
pkg/: prepare_tarball.sh
pkg/fedora/: jsmapper-kmod.spec  jsmapper.spec
pkg/opensuse/: jsmapper.spec
profiles/crrcsim/: crrcsim-lg-wm-xtrm.xml
profiles/f4bms/: f4bms-x45.xml
profiles/flightgear/: flightgear-keys.txt  flightgear-x45.xml
profiles/test/: test-lg-wm-xtrm.xml  wingman-mouse.xml  x45-axis-bands.xml  x45-macro.xml  x45-modes.xml  x45-mouse.xml  x45-simple.xml  x45.xml
src/: CMakeLists.txt  jsmapper_config.h.cmake
src/lib/: CMakeLists.txt
src/lib/jsmapper/: CMakeLists.txt  action.cpp  action.h  axisaction.cpp  axisaction.h  band.h  buttonaction.cpp  buttonaction.h  common.cpp  common.h  condition.cpp  condition.h  device.cpp  device.h  devicemap.cpp  devicemap.h  keyaction.cpp  keyaction.h  keymap.cpp  keymap.h  log.cpp  log.h  macroaction.cpp  macroaction.h  mode.cpp  mode.h  monitor.cpp  monitor.h  nullaction.cpp  nullaction.h  profile.cpp  profile.h  xmlhelpers.cpp  xmlhelpers.h
src/linux/drivers/input/: CMakeLists.txt  Kbuild  jsmapper_api.h  jsmapper_core.c  jsmapper_core.h  jsmapper_evgen.c  jsmapper_evgen.h  jsmapper_log.h  jsmapper_main.c
src/python/jsmapper/: device.sip
src/share/: CMakeLists.txt
src/share/devices/: logitech_wingman_extreme.xml  saitek_x45.xml  trust_ff380_ff_racemaster.xml
src/test/: CMakeLists.txt
src/test/jsmapper/: CMakeLists.txt
src/test/jsmapper/action/: CMakeLists.txt  main.cpp
src/test/jsmapper/axisaction/: CMakeLists.txt  main.cpp
src/test/jsmapper/buttonaction/: CMakeLists.txt  main.cpp
src/test/jsmapper/condition/: CMakeLists.txt  main.cpp
src/test/jsmapper/keyaction/: CMakeLists.txt  main.cpp
src/test/jsmapper/keymap/: CMakeLists.txt  main.cpp
src/test/jsmapper/macroaction/: CMakeLists.txt  main.cpp
src/test/jsmapper/mode/: CMakeLists.txt  main.cpp
src/test/jsmapper/profile/: CMakeLists.txt  main.cpp
